samples/_failures_safe/1761152574_67c049_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_995e90f4.c: In function ‘main’:
./samples/SAFE/__tmp_995e90f4.c:180:5: error: expected expression at end of input
  180 |     if (len > 0 && input[len - 1] ==
      |     ^~
./samples/SAFE/__tmp_995e90f4.c:180:5: error: expected declaration or statement at end of input
